--- a/html/popup.html
+++ b/html/popup.html
@@ -6,6 +6,7 @@
 		<script src="/js/popup.js"></script>
 	</head>
 	<body>
+		<div id="topbar"></div>
 		<input id="searchbar"
 			type="text"
 			autocomplete="on"
